All links fixed

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,13 +6,13 @@ block content
     p="Explore the following technologies and concepts using the Developer Sandbox Activities we've created:"
     .card-group 
         .card(style="width: 18rem")
-            img(src="/images/pizza-card.png", alt="Card image cap", style="card-img-top")
+            img(src="/images/ST-serverless_large.png", alt="Card image cap", style="card-img-top")
             .card-body 
                 .card-title 
                     h5="Activity"
                     .card-text
-                    p='Event-Driven Architecture using Apache Kafka (with Red Hat OpenShift Streams for Apache Kafka)'
-                    a(class='btn btn-primary', href='https://developers.redhat.com/node/226211') Take me there
+                    p='Create an OpenShift Serverless function'
+                    a(class='btn btn-primary', href='https://developers.redhat.com/developer-sandbox/activities/create-openshift-serverless-function') Take me there
         .card(style="width: 18rem")
             img(src="/images/petclinic-card.png", alt="Card image cap", style="card-img-top")
             .card-body 
