All links fixed

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
                     h5="Activity"
                     .card-text
                     p='Deploy a Java Application on Kubernetes in minutes'
-                    a(class='btn btn-primary', href='https://developers.redhat.com/node/226211') Take me there
+                    a(class='btn btn-primary', href='https://developers.redhat.com/developer-sandbox/activities/create-openshift-serverless-function') Take me there
         .card(style="width: 18rem")
             img(src="/images/kube-activity-card.png", alt="Card image cap", style="card-img-top")
             .card-body 
@@ -28,6 +28,6 @@ block content
                     h5="Activity"
                     .card-text
                     p='Learn Kubernetes'
-                    a(class='btn btn-primary', href='https://developers.redhat.com/node/226211') Take me there
+                    a(class='btn btn-primary', href='https://developers.redhat.com/developer-sandbox/activities/learn-kubernetes-using-red-hat-developer-sandbox-openshift') Take me there
     p="This is the Node.js (Express.js) example for Developer Sandbox for Red Hat OpenShift"
     p="Find it at https://github.com/redhat-developer-demos/sandbox-nodejs"
